# touchinput_test

./: CMakeLists.txt  MouseUInput.cpp  MouseUInput.h  MouseX11.cpp  MouseX11.h  Serial.cpp  Serial.h  coords.h  main.cpp
